--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,7 @@ input[type=radio]{
   }
   
   
-  .readmore-btn, .create-review, .edit, .delete , .registory-btn, .sign-btn{
+  .readmore-btn, .registory-btn, .sign-btn{
     background: none!important;
     border: none;
     padding: 0!important;
@@ -490,7 +490,7 @@ input[type=radio]{
   }
 
   
-  .readmore-btn, .create-review, .edit, .delete , .registory-btn, .sign-btn{
+  .readmore-btn, .registory-btn, .sign-btn{
     background: none!important;
     border: none;
     padding: 0!important;
@@ -618,7 +618,7 @@ input[type=radio]{
   
    
   
-    .readmore-btn, .create-review, .edit, .delete , .registory-btn, .sign-btn{
+    .readmore-btn, .registory-btn, .sign-btn{
       background: none!important;
       border: none;
       padding: 0!important;
@@ -744,7 +744,7 @@ input[type=radio]{
   
   
   
-    .readmore-btn, .create-review, .edit, .delete , .registory-btn, .sign-btn{
+    .readmore-btn , .registory-btn, .sign-btn{
       background: none!important;
       border: none;
       padding: 0!important;
