--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -258,6 +258,11 @@
 
 @media (min-width: 769px) and (max-width: 992px){
 
+  .cart-details{
+    display: flex;
+    flex-direction: row;
+    gap: 100px;
+  }
  
   .cart-header {
     text-align: center;
@@ -286,7 +291,7 @@
     border-radius: 5px;
     margin: 0 20px;
     padding: 10px;
-    width: 300px;
+    width: 450px;
   }
 
   .count-number {
@@ -323,14 +328,13 @@
     text-align: center;
   }
 
-  .order-details {
-    margin: 0 20px;
-  }
+ 
 
   .product-box{
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    gap: 30px;
+    
   }
 
   .card-info{
@@ -338,4 +342,20 @@
     flex-direction: column;
     align-items: center;
   }
+
+
+    .order-details {
+      border: silver solid 1px;
+      box-shadow: 2px 2px 4px #000000;
+      text-align: left;
+      border-radius: 20px;
+      width: 1200px;
+      height: 250px;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-right: 10px;
+    }
+    hr{
+      width: 100%;
+    }
 }
