--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -124,6 +124,10 @@ h2{
     transition: background-color 0.3s ease;
   }
 
+  .review-edit-form{
+    margin-top: 20px;
+  }
+
   .delete{
     background-color: red;
     border-radius: 3px;
@@ -193,6 +197,11 @@ h2{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+  }
+
+
+  .review-edit-form{
+    margin-top: 20px;
   }
 
   .label-signup{
