Allowed users to format the review text as of right now bold and italic

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,10 @@ input[type=radio]{
   cursor: pointer;
 }
 
+.underlined {
+  text-decoration: underline;
+}
+
  @media (min-width: 993px){
 
    body{
