--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -13,6 +13,11 @@
     border: none;
   }
 
+  .review-image{
+    width: 150px;
+    height: 200px;
+  }
+
 @media (min-width: 993px){
   
   .review-info-container {
