--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,7 +6,8 @@
     
     footer{
         margin-top: 200px;
-        border-top: 1px solid white;
+        border-top: 2px solid white;
+        height: 100px;
     }
     
     .footer-name{
