--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -1,76 +1,177 @@
 
+/* 229 × 107 px */
 
 @media (min-width: 993px){
 
-    .landing-page{
+.h3{
+  color: white;
+}
 
-        margin-left: 50px;
-        margin-right: 50px;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-column-gap: 100px;
-        border: silver 2px solid;
-        margin-top: 10px;
-      
+   .border-product-container{
+
+    margin-left: auto;
+    margin-right: auto;
+    height: 350px;
+    width: 850px;
+    border: silver 2px solid;
+    margin-top: 10px;
+   }
+
+.border_button_spacing {
+  flex-grow: 1;
+}
+
+.feature-header{
+  color: white;
+}
+.border_button {
+  height: 32px;
+  border: none;
+  background-color: rgb(19, 186, 186);
+  color: white;
+  border-radius: 3px;
+}
+
+      .border_images{
+        height: 350px;
       }
 
-      .landing-header, .featured-header{
-        text-align: justify;
-        margin-left: 100px;
-        padding: 20px;
-        color: white;
-      
-      }
-      .category-description {
-        line-height: 1.5;
-        padding: 20px;
+      .border_images_container{
         text-align: left;
-        font-size: 14px;
-        font-weight: bold;
-        margin-left: 100px;
-        color: white;
       }
 
-
-      .border-products{
-        margin-top: 60px;
-        display: grid;
-        grid-template-columns: repeat(3, 20%);
-        grid-column-gap: 15px;
+      .border-product{
+        display: flex;
+        flex-direction: row;
+        
+       
       }
 
-      .landing-image{
-        height: 150px;
-        width: 120px;
-      }
-
-      .featured-items{
+      .border_product_desc{
+        line-height: 25px;
         text-align: left;
-        display: grid;
-        grid-template-columns: repeat(3 , 1fr);
-        margin-left: 120px;
-        margin-right: 20px;
-        padding: 20px;
-        grid-column-gap: 15px;
-        border: silver 1px solid;
+        margin-left: 5px;
+      }
+
+      .border_product_description{
+        display: flex;
+        flex-direction: column;
+      }
+
       
-      }
 
-      .featured-border{
-  
-        padding-left: 140px;
-       padding-top: 22px;
-       }
+   .border_button_container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+   }
 
 
-       .featured-image{
-        height: 180px;
-        width: 130px;
-      }
-      
-      h4{
-        color: white;
-      }
+
+   .page-count {
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Align items vertically in the center */
+  margin-top: 20px;
+}
+
+.home-pagination {
+  display: flex;
+  gap: 10px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.pagination-link,
+.page-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.pagination-link:hover {
+  background-color: #f0f0f0;
+}
+
+.active {
+  background-color: #007bff;
+  color: white;
+  font-weight: bold;
+}
+
+.page-link {
+  display: block;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: transparent;
+  color: inherit;
+
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.page-link:hover {
+  background-color: #f0f0f0;
+}
+
+.Home{
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.popular_product_image{
+  width: 229px;
+  height: 107px;
+}
+
+.popular_products_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 40px;
+}
+
+
+.popular_products_border{
+  border: white 1px solid;
+  height: 150px;
+}
+
+
+.popular_product_price_button_container{
+  display: flex;
+  align-items: center;
+ 
+}
+
+.popular_button_container {
+  margin-left: auto;
+}
+
+
+.popular_button{
+  height: 30px;
+  border: none;
+  background-color: rgb(19, 186, 186);
+  color: white;
+  border-radius: 3px;
+}
+
+.popular_product_price_container{
+  margin-left: 5px;
+}
 
 }
 
