Changed how the product cards look and give it the same background as the navbar

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -79,7 +79,8 @@
 
   .clear-cart{
     border: none;
-    background-color: black
+    background-color: transparent;
+    margin-left: auto;
   }
 
 }
