--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -17,10 +17,11 @@
 
     nav{
         border-bottom: silver solid 2px;
+        background: linear-gradient(to right, #053698, #052c49);
       }
 
       .Navigation{
-        margin-top: 10px;
+
         display: grid;
         grid-template-columns: 40% 20% 5%;
         grid-column-gap: 150px;
@@ -66,13 +67,13 @@
     padding: 15px;
     height: 30px;
     width: 400px;
-    background-color: black;
+    background-color:  #051b46;
     color: white;
     border: white 1px solid;
   }
   
   .searchIcon{
-    background-color: black;
+    background-color:  #051b46;
     height: 30px;
     margin-top: 8px;
     display: grid;
@@ -87,7 +88,7 @@
     width: 300px;
     height: 200px;
     border: white 1px solid;
-    background-color: black;
+    background-color: rgb(83, 80, 80);
     overflow: hidden;
     overflow-y: auto;
     position: absolute;
