--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -74,21 +74,20 @@ font-size: 15px;
 color: white;
 border: none;
 border-radius: 5px;
-background-color: rgb(11, 11, 191)
-
+background-color: rgb(48, 166, 216);
 }
 
 
 .fav-btns{
 border: none;
-background-color: black;
+background-color: transparent;
 text-align: left;
 }
 
 
 .des-btns{
 border: none;
-background-color: black;
+background-color: transparent;
 color: white;
 font-size: 20px;
 cursor: pointer;
