--- a/src/Components/Favorite/Favorite.css
+++ b/src/Components/Favorite/Favorite.css
@@ -14,7 +14,7 @@
     .delete-trash{
   
         border: none;
-      background-color: black;
+        background-color: transparent;
       }
 
       .search-cart{
