--- a/src/Components/UserInfo/UsersDetails.css
+++ b/src/Components/UserInfo/UsersDetails.css
@@ -12,12 +12,11 @@
 
       .vertical {
       
-        top: 0;
-        bottom: 0;
+        margin-top: 5px;
        
         border-left: 2px solid #ccc;
         margin: 0 10px;
-        height: 145%;
+   
       }
 
 
