--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  background: linear-gradient(to right, #363e4e, #0a4675);
+  background: linear-gradient(to right, #0f2043, #0a4675);
   
   
 }
