--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ input[type=radio]{
 
   .signup-form{
     border: 1px solid white;
-    background-color: black;
+    background-color: #012f52;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -387,7 +387,7 @@ input[type=radio]{
 
   .login-form{
     border: 1px solid white;
-    background-color: black;
+    background-color: #012f52;
     border-radius: 8px;
     height: 460px;
     margin-left: 450px;
@@ -642,7 +642,7 @@ input[type=radio]{
   
     .signup-form {
       border: 1px solid #ccc;
-      background-color: black;
+      background-color: #012f52;
      display: flex;
      flex-direction: column;
      align-items: center;
