--- a/src/Components/Registration/Login.css
+++ b/src/Components/Registration/Login.css
@@ -1,6 +1,39 @@
 
 
 @media (min-width: 993px){
+    .login-form{
+        border: 1px solid white;
+        background-color: #012f52;
+        border-radius: 8px;
+        height: 450px;
+        margin-left: 450px;
+        margin-right: 450px;
+        box-shadow: 1px 2px 2px 2px #000;
+      }
 
+      .login-form{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 30px;
+        gap: 20px;
+      }
+
+      .label-signup{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        text-align: left;
+        font-weight: bold;
+        justify-content: flex-start;
+        align-items: flex-start;
+      }
+      
+
+      .login_input{
+        height: 35px;
+        width: 300px;
+        border-radius: 4px;
+      }
     
 }
