--- a/src/Components/Favorite/Favorite.css
+++ b/src/Components/Favorite/Favorite.css
@@ -52,11 +52,14 @@
       .search-label{
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 5px;
       }
 
       .search-history{
-        width: 300px;
+        width: 290px;
+        height: 30px;
       }
 
 
