--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -1,73 +1,13 @@
 
 /* 229 × 107 px */
 
-@media (min-width: 993px){
-
-.h3{
-  color: white;
-}
-
-   .border-product-container{
-
-    margin-left: auto;
-    margin-right: auto;
-    height: 350px;
-    width: 850px;
-    border: silver 2px solid;
-    margin-top: 10px;
-    background-color: #012f52;
-   }
-
-.border_button_spacing {
-  flex-grow: 1;
-}
-
-.feature-header{
-  color: white;
-}
-.border_button {
-  height: 32px;
+.popular_button{
+  height: 30px;
   border: none;
-  background-color: rgb(19, 186, 186);
+  background-color: rgb(65, 167, 210);
   color: white;
   border-radius: 3px;
 }
-
-      .border_images{
-        height: 350px;
-      }
-
-      .border_images_container{
-        text-align: left;
-      }
-
-      .border-product{
-        display: flex;
-        flex-direction: row;
-        
-       
-      }
-
-      .border_product_desc{
-        line-height: 25px;
-        text-align: left;
-        margin-left: 5px;
-      }
-
-      .border_product_description{
-        display: flex;
-        flex-direction: column;
-      }
-
-      
-
-   .border_button_container{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-   }
-
-
 
    .page-count {
   display: flex;
@@ -126,16 +66,95 @@
   background-color: #f0f0f0;
 }
 
+
+.h3{
+  color: white;
+}
+
+.feature-header{
+  color: white;
+}
+.border_button {
+  height: 32px;
+  border: none;
+  background-color: rgb(65, 167, 210);
+  color: white;
+  border-radius: 3px;
+}
+
+
+
+.border_product_desc{
+  line-height: 25px;
+  text-align: left;
+  margin-left: 5px;
+}
+
+
+@media (min-width: 993px){
+  .popular_product_image{
+    width: 259px;
+    height: 187px;
+  }
+  .border_images{
+    height: 350px;
+  }
+  .border-product-container{
+
+   margin-left: auto;
+   margin-right: auto;
+   height: 350px;
+   width: 850px;
+   border: silver 2px solid;
+   margin-top: 10px;
+   background-color: #012f52;
+  }
+
+
+
+.border_button_spacing {
+  flex-grow: 1;
+}
+
+
+.border_button:hover{
+  cursor: pointer;
+}
+
+
+      .border_images_container{
+        text-align: left;
+      }
+
+      .border-product{
+        display: flex;
+        flex-direction: row;
+        
+       
+      }
+
+
+      .border_product_description{
+        display: flex;
+        flex-direction: column;
+      }
+
+      
+
+   .border_button_container{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+   }
+
+
+
 .Home{
   display: flex;
   flex-direction: column;
   gap: 30px;
 }
 
-.popular_product_image{
-  width: 259px;
-  height: 187px;
-}
 
 .popular_products_container{
   display: flex;
@@ -164,12 +183,9 @@
 }
 
 
-.popular_button{
-  height: 30px;
-  border: none;
-  background-color: rgb(65, 167, 210);
-  color: white;
-  border-radius: 3px;
+
+.popular_button:hover{
+  cursor: pointer;
 }
 
 .popular_product_price_container{
@@ -181,185 +197,200 @@
 
 @media (min-width: 320px) and (max-width: 576px) {
 
-  .landing-page {
-    background-color: black;
+  .border-product-container{
+
+    margin-left: auto;
+    margin-right: auto;
     border: silver 2px solid;
+    margin-top: 10px;
+    background-color: #012f52;
+   }
 
-  }
+.border_images{
+  width: 200px;
+}
 
-  .landing-header{
-  white-space: nowrap;
 
-  }
+.border_images_container{
+  text-align: center;
+}
 
-  .landing-image{
-    height: 150px;
-    width: 120px;
-  }
+.border_button{
+  margin-bottom: 10px;
+}
 
-  .border-products {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   gap: 10px;
+
+.popular_products_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+
+
+
+.popular_products_border{
+  border: white 1px solid;
+  height: 250px;
+  width: 300px;
+  background: linear-gradient(to right, #053698, #052c49);
+}
+
+.popular_products_section{
+  text-align: center;
+}
+
+.popular_product_price_button_container{
+  display: flex;
+  align-items: center;
  
-  }
+}
 
-  .category-description {
-    line-height: 1.5;
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    /* word-break: break-word; */
-    hyphens: auto;
-    padding: 0 20px; /* Add padding for better readability */
-    color: white;
-  }
-  
+.popular_button_container {
+  margin-left: auto;
+  margin-right: 5px;
+}
 
-  .featured-items{
-    text-align: center;
-    border: white 1px solid;
-    flex-direction: column;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-  
-  }
+.popular_product_image{
+  width: 100%;
+  height: 187px;
+}
 
 
-  .featured-image{
-    height: 180px;
-    width: 130px;
-  }
-
-  h4{
-    color: white;
-  }
-  
 }
 
 
 @media (min-width: 577px) and (max-width: 768px){
+  .border-product-container{
 
-  .landing-page {
-    background-color: black;
+    margin-left: auto;
+    margin-right: auto;
     border: silver 2px solid;
+    margin-top: 10px;
+    background-color: #012f52;
+   }
 
-  }
+.border_images{
+  width: 200px;
+}
 
-  .landing-header{
-  white-space: nowrap;
 
-  }
+.border_images_container{
+  text-align: center;
+}
 
-  .landing-image{
-    height: 150px;
-    width: 120px;
-  }
+.border_button{
+  margin-bottom: 10px;
+}
 
-  .border-products {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   gap: 10px;
+
+.popular_products_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+
+
+
+.popular_products_border{
+  border: white 1px solid;
+  height: 250px;
+  width: 300px;
+  background: linear-gradient(to right, #053698, #052c49);
+}
+
+.popular_products_section{
+  text-align: center;
+}
+
+.popular_product_price_button_container{
+  display: flex;
+  align-items: center;
  
-  }
+}
 
-  .category-description {
-    line-height: 1.5;
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    /* word-break: break-word; */
-    hyphens: auto;
-    padding: 0 20px; /* Add padding for better readability */
-    color: white;
-  }
-  
+.popular_button_container {
+  margin-left: auto;
+  margin-right: 5px;
+}
 
-  .featured-items{
-    text-align: center;
-    border: white 1px solid;
-    flex-direction: column;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-  
-  }
-
-
-  .featured-image{
-    height: 180px;
-    width: 130px;
-  }
-
-  h4{
-    color: white;
-  }
+.popular_product_image{
+  width: 100%;
+  height: 187px;
+}
 
 
 }
 
 
 @media (min-width: 769px) and (max-width: 992px){
-  .landing-page {
-    background-color: black;
-    border: silver 2px solid;
-
-  }
-
-  .landing-header{
-  white-space: nowrap;
-
-  }
-
-  .landing-image{
-    height: 150px;
-    width: 120px;
-  }
-
-  .border-products {
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
-   gap: 10px;
  
-  }
+  .border-product-container{
 
-  .category-description {
-    line-height: 1.5;
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    /* word-break: break-word; */
-    hyphens: auto;
-    padding: 0 20px; /* Add padding for better readability */
-    color: white;
-  }
-  
+    margin-left: auto;
+    margin-right: auto;
+    border: silver 2px solid;
+    margin-top: 10px;
+    background-color: #012f52;
+   }
 
-  .featured-items{
-    text-align: left;
-    display: grid;
-    grid-template-columns: repeat(3 , 1fr);
-    padding-left: 30px;
-    grid-column-gap: 15px;
-    border: silver 1px solid;
-  
-  }
+.border_images{
+  width: 200px;
+}
 
 
-  .featured-image{
-    height: 180px;
-    width: 130px;
-  }
+.border_images_container{
+  text-align: center;
+}
 
-  h4{
-    color: white;
-  }
-  .featured-border{
-    margin-top: 30px;
-  }
+.border_button{
+  margin-bottom: 10px;
+}
+
+
+.popular_products_container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 40px;
+}
+
+
+
+
+.popular_products_border{
+  border: white 1px solid;
+  height: 250px;
+  width: 300px;
+  background: linear-gradient(to right, #053698, #052c49);
+}
+
+.popular_products_section{
+  text-align: center;
+}
+
+.popular_product_price_button_container{
+  display: flex;
+  align-items: center;
+ 
+}
+
+.popular_button_container {
+  margin-left: auto;
+  margin-right: 5px;
+}
+
+.popular_product_image{
+  width: 100%;
+  height: 187px;
+}
+
+
 
 }
