No longer able to display all the edit review form when clicking on the edit button

--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -125,7 +125,7 @@
 
   .clear-cart {
     border: none;
-    background-color: black
+    background-color: transparent
   }
 
   .product-quantity-price {
@@ -211,7 +211,7 @@
 
   .clear-cart {
     border: none;
-    background-color: black
+    background-color: transparent
   }
 
   .product-quantity-price {
@@ -303,7 +303,7 @@
 
   .clear-cart {
     border: none;
-    background-color: black
+    background-color: transparent
   }
 
   .product-quantity-price {
