--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -171,13 +171,13 @@ margin-top: 10px;
 
   .fav-btns{
     border: none;
-    background-color: black;
+    background-color:transparent;
     text-align: left;
     }
 
     .des-btns{
       border: none;
-      background-color: black;
+      background-color: transparent;
       color: white;
       font-size: 20px;
       cursor: pointer;
@@ -207,8 +207,8 @@ p{
   height: 20px;
   border-radius: 5px;
   width: 150px;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  background-color:white;
+  color: black;
   border: white 1px solid;
   }
 
@@ -230,8 +230,8 @@ p{
       height: 20px;
       border-radius: 5px;
       width: 150px;
-      background-color: rgb(0, 0, 0);
-      color: white;
+      background-color: white;
+      color: black;
       border: white 1px solid;
       }
 
