--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -93,7 +93,7 @@
 
 @media (min-width: 993px){
   .popular_product_image{
-    width: 259px;
+    width: 100%;
     height: 187px;
   }
   .border_images{
@@ -167,6 +167,7 @@
 .popular_products_border{
   border: white 1px solid;
   height: 250px;
+  width: 350px;
   background: linear-gradient(to right, #053698, #052c49);
 }
 
