--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -6,7 +6,13 @@
         grid-template-columns: repeat(2, 45%);
       }
 
-
+      .cart-btns {
+        border: none;
+        background-color: rgb(48, 166, 216);
+        color: white;
+        height: 50px;
+        width: 200px;
+      }
       .product-card-section {
       box-sizing: border-box;
       border: 1px solid silver; 
@@ -142,7 +148,7 @@
 
   .cart-btns {
     border: none;
-    background-color:blue;
+    background-color: rgb(48, 166, 216);
     color: white;
     height: 50px;
     width: 200px;
@@ -228,7 +234,7 @@
 
   .cart-btns {
     border: none;
-    background-color:blue;
+    background-color: rgb(48, 166, 216);
     color: white;
     height: 50px;
     width: 200px;
@@ -320,7 +326,7 @@
 
   .cart-btns {
     border: none;
-    background-color:blue;
+    background-color: rgb(48, 166, 216);
     color: white;
     height: 50px;
     width: 200px;
