--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -93,8 +93,12 @@
 
   }
 
+  .delete:hover , .edit:hover{
+    cursor: pointer;
+  }
+
   .edit{
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     border-radius: 3px;
     border: none;
     color: none;
@@ -164,7 +168,7 @@ h2{
 @media (min-width: 320px) and (max-width: 576px){
 
   .create-review {
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     color: #fff; /* Change to your desired text color */
     padding: 10px 20px;
     font-size: 16px;
@@ -192,7 +196,7 @@ h2{
   }
 
   .edit{
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     border-radius: 3px;
     border: none;
     color: none;
@@ -270,7 +274,7 @@ h2{
   }
 
   .create-review {
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     color: #fff; /* Change to your desired text color */
     padding: 10px 20px;
     font-size: 16px;
@@ -290,7 +294,7 @@ h2{
   }
 
   .edit{
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     border-radius: 3px;
     border: none;
     color: none;
@@ -331,7 +335,7 @@ h2{
 
 
   .create-review {
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     color: #fff; /* Change to your desired text color */
     padding: 10px 20px;
     font-size: 16px;
@@ -351,7 +355,7 @@ h2{
   }
 
   .edit{
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
     border-radius: 3px;
     border: none;
     color: none;
