--- a/src/Components/UserInfo/UserEditForm.css
+++ b/src/Components/UserInfo/UserEditForm.css
@@ -6,5 +6,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
+
+.edit-input{
+    height: 30px;
+    width: 300px;
+}
