--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -28,6 +28,7 @@
   }
 
 
+
 @media (min-width: 993px){
   
   .review-info-container {
@@ -153,6 +154,29 @@
     gap: 30px;
     margin-top: 10px;
   }
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+  
+  .modal-container2 {
+    border: 1px solid white;
+    width: 600px;
+    background-color: #012f52;
+    box-shadow: 1px 2px 1px black;
+  
+  }
+
+
+
   
 }
 h2{
@@ -161,8 +185,8 @@ h2{
 
 
 #content{
-  height: 200px;
-  width: 700px;
+  height: 100px;
+  width: 500px;
 }
 
 @media (min-width: 320px) and (max-width: 576px){
@@ -177,6 +201,30 @@ h2{
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
+
+
+  .modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+  }
+  
+  .modal-container2 {
+    border: 1px solid white;
+    width: 600px;
+    background-color: #012f52;
+    box-shadow: 1px 2px 1px black;
+  
+  }
+
+
+
 
   .review-edit-form{
     margin-top: 20px;
