--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -5,14 +5,18 @@
   gap: 8px;
 }
 
-
+nav{
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+nav{
+  border-bottom: silver solid 2px;
+  background: linear-gradient(to right, #053698, #052c49);
+}
 
 @media(min-width:993px){
   
-  nav{
-    border-bottom: silver solid 2px;
-    background: linear-gradient(to right, #053698, #052c49);
-  }
     a{
         text-decoration: none;
         color: white;
