--- a/src/Components/ProductDetails.js/Product.css
+++ b/src/Components/ProductDetails.js/Product.css
@@ -172,7 +172,7 @@ margin-top: 10px;
   color: white;
   border: none;
   border-radius: 5px;
-  background-color: rgb(11, 11, 191)
+  background-color: rgb(48, 166, 216);
   
   }
 
@@ -284,7 +284,7 @@ p{
       color: white;
       border: none;
       border-radius: 5px;
-      background-color: rgb(11, 11, 191)
+      background-color: rgb(48, 166, 216);
       
       }
     
@@ -382,7 +382,7 @@ p{
       color: white;
       border: none;
       border-radius: 5px;
-      background-color: rgb(11, 11, 191)
+      background-color: rgb(48, 166, 216);
       
       }
     
