--- a/src/Components/Reviews/ReviewProgress.css
+++ b/src/Components/Reviews/ReviewProgress.css
@@ -7,21 +7,21 @@
   .progress-bar {
     width: 100%;
     height: 20px;
-    background-color: #ccc;
+    background-color: #ffffff;
     border-radius: 5px;
     display: flex;
     overflow: hidden; /* Hide overflowing content */
     margin-bottom: 10px; /* Add spacing between progress bars */
   }
   
-  .blue {
-    background-color: blue;
+  .yellow{
+    background-color: rgb(236, 236, 12);
     border-radius: 5px 0 0 5px; /* Rounded corners on the left side */
     transition: width 0.3s ease-in-out;
   }
   
   .white {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     border-radius: 0 5px 5px 0; /* Rounded corners on the right side */
     transition: width 0.3s ease-in-out;
   }
