--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -27,7 +27,18 @@
     background-color: blue;
   }
 
+  .average_stars{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+  }
 
+  .average_container{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+    margin-bottom: 10px;
+  }
 
 @media (min-width: 993px){
   
