--- a/src/Components/Reviews/Reviews.css
+++ b/src/Components/Reviews/Reviews.css
@@ -13,6 +13,12 @@
     border: none;
   }
 
+  .Review{
+    border: white solid 1px;
+    background-color: #012f52;
+    margin-top: 20px;
+  }
+
   .review-image{
     width: 150px;
     height: 200px;
@@ -24,7 +30,7 @@
     color: white;
     height: 30px;
     border-radius: 3px;
-    background-color: blue;
+    background-color: rgb(48, 166, 216);
   }
 
   .average_stars{
@@ -39,6 +45,28 @@
     gap: 4px;
     margin-bottom: 10px;
   }
+
+
+  .review-info-container{
+    margin-left: 10px;
+  }
+
+
+  .review-btns{
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+
+  .review-edit{
+    background-color: rgb(48, 166, 216);
+    border-radius: 3px;
+    border: none;
+    color: none;
+    height: 25px;
+    color: white;
+  }
+
 
 @media (min-width: 993px){
   
@@ -109,7 +137,7 @@
     cursor: pointer;
   }
 
-  .edit{
+  .review-edit{
     background-color: rgb(48, 166, 216);
     border-radius: 3px;
     border: none;
