--- a/src/Components/landingpage/home.css
+++ b/src/Components/landingpage/home.css
@@ -80,6 +80,8 @@
   background-color: rgb(65, 167, 210);
   color: white;
   border-radius: 3px;
+
+
 }
 
 
@@ -88,7 +90,9 @@
   line-height: 25px;
   text-align: left;
   margin-left: 5px;
+
 }
+
 
 
 @media (min-width: 993px){
@@ -137,15 +141,12 @@
       .border_product_description{
         display: flex;
         flex-direction: column;
+        align-items: center;
       }
 
       
 
-   .border_button_container{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-   }
+  
 
 
 
