--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,10 +1,19 @@
+
+.footer_header{
+    color: rgb(255, 255, 255);
+}
+
 .footer-name{
-    text-align: left;
-    margin-left: 20px;
+   
     color: white;
 }
 
 @media(min-width: 993px){
+    .footer-name{
+        text-align: left;
+        margin-left: 20px;
+        color: white;
+    }
     .footer-link{
         color: white;
     }
@@ -30,16 +39,20 @@
     .footer-link{
         color: white;
     }
+    
     footer{
-        margin-top: 200px;
-        border-top: 1px solid white;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 10px;
+        border-top: white solid 1px;
     }
 
     .footers{
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
         gap: 10px;
+        margin-left: 10px;
     }
 
 }
@@ -49,17 +62,22 @@
     .footer-link{
         color: white;
     }
+    
     footer{
-        margin-top: 200px;
-        border-top: 1px solid white;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-top: 10px;
+        border-top: white solid 1px;
     }
 
     .footers{
         display: flex;
-        flex-direction: row;
-        justify-content: center;
+        flex-direction: column;
         gap: 10px;
+        margin-left: 10px;
     }
+
 
 }
 
